--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,5 +2,19 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>This is the home page.</h1>
+<h1 align="center">Notes</h1>
+<ul class="list-group list-group-flush" id="notes">
+    {% for note in user.notes %}
+    <li class="list-group-item">{{ note.data }}
+        <button class="btn btn-danger float-end" onclick="deleteNote('{{ note.id }}')">Delete</button>
+    </li>
+    {% endfor %}
+</ul>
+<form method="POST">
+    <textarea class="form-control" name="note" id="note"></textarea>
+    <br/>
+    <div align="center">
+        <button type="submit" class="btn btn-primary">Add Note</button>
+    </div>
+</form>
 {% endblock %}
